--- a/angular.json
+++ b/angular.json
@@ -1,4 +1,4 @@
-{
+  {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
@@ -63,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "library:build"
+            "browserTarget": "library:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
