--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-auth-oidc-client": "^10.0.11",
     "keycloak-angular": "^7.1.0",
-    "keycloak-js": "^4.0.0-beta.2",
+    "keycloak-js": "^6.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
