--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-auth-oidc-client": "^10.0.11",
     "keycloak-angular": "^7.1.0",
     "keycloak-js": "^6.0.0",
+    "ngx-loading": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
